--- a/src/App.css
+++ b/src/App.css
@@ -3,41 +3,49 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  color: #fff;
-
-}
-
-.App-interface {
-  height: 100vh;
-  background-image: url('./assets/images/wallpaper.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  text-align: center;
 
 
 }
+
 
 .title2 {
-  position: absolute;
+  background-image: url('./assets/images/wallpaper.jpg');
+  background-size: contain;
   height: 20vh;
   width: 100vw;
-  margin-top: 1rem;
+
+}
+
+.location {
+  width: 80%;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 30px;
+  border-radius: 5px;
+  background-color: rgba(12, 135, 223, 0.87);
 }
 
 .cards-container {
-  height: 100vh;
+  height: 100%;
   max-width: 100%;
-  background-image: url('./assets/images/espacio.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
+}
+
+.portal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 195px;
 }
 
 /* CARDS */
@@ -49,24 +57,25 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
   gap: 1rem;
+  padding: 2rem;
 }
 
 .container figure {
   position: relative;
-  height: 250px;
-  width: 250px;
+  height: 200px;
+  width: 200px;
   overflow: hidden;
   border-radius: 50%;
-  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 15px 25px rgba(6, 6, 129, 0.5);
   cursor: pointer;
 }
 
-.container figure img {
+.img {
   width: 100%;
   height: 100%;
   transition: all 500ms ease-out;
+  
 }
 
 .container figure .capa {
@@ -74,7 +83,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(3, 156, 3, 0.537);
+  background: rgba(6, 6, 129, 0.5);
   transition: all 500ms ease-out;
   opacity: 0;
   visibility: hidden;
@@ -91,7 +100,7 @@
   margin-bottom: 15px;
 }
 
-.container figure:hover> img {
+.container figure:hover>.img {
   transform: scale(1.3);
 }
 
@@ -105,8 +114,9 @@
 
 .container figure .capa li {
   color: #fff;
-  font-size: 15px;
-  line-height: 1.5;
+  font-size: 12px;
+  font-weight: 200;
+  line-height: 1.3;
   width: 100%;
   max-width: 220px;
   margin: auto;
@@ -117,5 +127,23 @@
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
-  margin: 0;
+
+}
+
+button {
+  border: none;
+  padding: 10px;
+  color:#fff;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: 1.5rem;
+  background-color: rgba(12, 135, 223, 0.87);
+}
+input {
+  padding: 10px;
+  border: none;
+  color: #fff;
+  font-size: 1.3rem;
+  width: 150px;
+  background-color: rgba(12, 135, 223, 0.87);
 }
